--- a/app.json
+++ b/app.json
@@ -39,7 +39,7 @@
         },
         "DB_NAME":{ 
             "description":"Your Mongo DB Database Name ",
-            "value": "pyro-botz",
+            "value": "speed-botz",
             "required": false
         },
         "START_PIC": {
